@@ -70,7 +70,7 @@ It will tell you about duplication, but it will compile.
 4. Building ModMono.dll
 
 The ModMono.cs file is located in the src/ directory
-This is the command I use to build ModMono.dll:
+This is the command to build ModMono.dll:
 
 make -f makedll.mak
 
@@ -100,22 +100,25 @@ CONFIGURING APACHE
 ==================
 
 Copy the file /home/user/mono/mod_mono/src/.libs/libmod_mono.so to /home/user/mono/install/apache2/lib/
-Copy ModMono.dll to /home/user/mono/xsp/server/test/ModMono.dll
-The step above is important, due to a few glitches still being worked out, ModMono.dll needs to be
-copied to the same directory the ASP pages are being served from. If a machine.config is not installed in your path,
-which normally occurs during Mono installation, you may need to create a ModMono.exe.config. 
-You can find an example for the contents of this file in the data/machine.config subdirectory of the Mono distribution.
+Copy ModMono.dll to a place where the Mono runtime will find it, usually this means /usr/lib/ or wherever the
+rest of assemblies are located.
 
 Edit /home/user/mono/install/apache2/conf/httpd.conf :
 
 Listen 8080   
 LoadModule mono_module /home/user/mono/install/apache2/lib/libmod_mono.so
-LoadModMonoDll /home/user/mono/xsp/server/test/ModMono.dll
+MonoApplication /mono /home/user/mono/xsp/server/test
 
-Alias /mono /home/user/mono/xsp/server/test
-<location /mono/*.aspx>
-        SetHandler application/x-httpd-mono
-</location>
+The MonoApplication directive takes two arguments. The first one is the virtual path, which is part
+of the URL used to access your application. The second one is the physical path, the directory
+where the application resides. In this case is the directory containing the XSP test pages.
+Only onw MonoApplication directive is currently allowed.
+
+NOTE: If a machine.config is not installed in your path, which normally occurs during Mono installation,
+you may need to create a ModMono.exe.config. This file needs to be placed in the application base dir, in this case
+/home/user/mono/xsp/server/test/
+You can find an example for the contents of this file in the data/machine.config subdirectory of the Mono distribution.
+
 
 You can now start Apache with 
 /home/user/mono/install/apache2/bin/apachectl start
